--- a/SeqPlots.app/Contents/Info.plist
+++ b/SeqPlots.app/Contents/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFile</key>
 	<string>appIcon.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.przemol.Main</string>
+	<string>org.ps.seqplots</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
